--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,10 @@
-certifi==2019.6.16
-chardet==3.0.4
-Click==7.0
-cloudpickle==1.2.1
-cycler==0.10.0
-dask==2.0.0
-distributed==2.0.1
-elephant==0.6.2
-future==0.17.1
-HeapDict==1.0.0
-idna==2.8
-joblib==0.13.2
-kiwisolver==1.1.0
-matplotlib==3.1.0
-msgpack==0.6.1
-neo==0.7.1
-numpy==1.16.4
-pandas==0.24.2
-patsy==0.5.1
-psutil==5.6.3
-pyparsing==2.4.0
-python-dateutil==2.8.0
-pytz==2019.1
-PyYAML==5.1.1
 quantities==0.12.3
-requests==2.22.0
-scikit-learn==0.21.2
-scipy==1.3.0
-six==1.12.0
-sklearn==0.0
-sortedcontainers==2.1.0
-statsmodels==0.10.0
-tblib==1.4.0
-toolz==0.9.0
-tornado==6.0.3
+neo==0.7.1
+matplotlib==3.1.0
+numpy==1.16.4
+seaborn==0.9.0
 tqdm==4.32.2
-tsfresh==0.11.2
-urllib3==1.25.3
-zict==1.0.0
+pandas==0.25.3
+elephant==0.6.2
+tsfresh==0.13.0
+scikit_learn==0.22.1
